--- a/index.html
+++ b/index.html
@@ -15,40 +15,22 @@
             function AccountDetails(props) {
                     return <div> {props.account.publicKey} </div>
             }
-            class Account extends React.Component {
+            class Main extends React.Component {
                 constructor(props) {
                     super(props)
-                    this.state = {
-                        state: undefined,
-                        account: {
-                            publicKey: null
-                        },
-                        response: null
-                    }
+                    this.state = {clicked: false}
                     this.handleClick = this.handleClick.bind(this)
                 }
                 handleClick() {
                     console.log('Clicked', this.state)
-                    const pair = StellarSdk.Keypair.random();
-                    fetch(`https://friendbot.stellar.org?addr=${encodeURIComponent(pair.publicKey())}`)
-                    .then(response => response.json())
-                    .then((response) => {
-                        console.log(response);
-                        this.setState({
-                            state: "ready",
-                            response: response,
-                            account: {publicKey: pair.publicKey()}
-                        })
-                        console.log(this.state);
-                    });
-                    
+                    this.setState({clicked: true})
+                    main();
                 }
 
                 render() {
                     return (
                         <div>
-                            <AccountDetails account={this.state.account} />
-                           {this.state.account.publicKey === null ? <button onClick={this.handleClick}>Create Account</button> : null}
+                           {!this.state.clicked ? <button onClick={this.handleClick}>Click me and open console</button> : <div>Open Console</div>}
                         </div>
                     )
                 }
@@ -57,7 +39,7 @@
             function App() {
                 return (
                     <div>
-                        <Account />
+                        <Main />
                     </div>
                 );
             }
